@@ -85,7 +85,7 @@ export("+.section",
        lonFormat,
        longitude,
        "longitude<-",
-       magic,
+       oceMagic,
        magneticDeclination,
        makeFilter,
        makeSection,
