@@ -1,147 +1,0 @@
- 1866  -1.2  -0.3  -1.0  -0.7   0.1  -0.9  -0.7   0.7  -0.4   0.1   1.6  -0.3
- 1867   0.4  -0.0  -0.0   0.8   0.7  -0.5   0.6   0.5   0.1  -0.7  -1.2  -1.7
- 1868  -0.4  -0.8  -2.7   0.2  -1.9  -2.3  -0.8  -2.2  -2.2  -2.0  -2.5   1.0
- 1869  -3.9  -0.6  -0.8   2.5   2.1   1.6   2.1   1.3   0.2   1.5   0.9   0.6
- 1870   1.9   0.4  -1.2   0.4  -0.3  -1.2   0.1   1.4  -0.0  -0.9  -1.4  -2.4
- 1871  -2.4  -0.3  -3.4  -0.5  -0.6   0.2   0.4   0.6   1.0  -0.2  -0.0   1.8
- 1872   5.3   2.4   2.8  -0.9   1.8   2.6   3.5   1.4   5.6   3.1   4.8   5.0
- 1873   5.0   2.4   3.0   2.2   0.8  -3.4  -1.9  -0.8  -3.6  -2.8  -0.6   2.3
- 1874   1.9  -0.7  -0.7   1.0   1.7  -2.0  -0.4   1.3   3.6   3.6   0.8   2.1
- 1875   1.4  -0.3  -1.6   1.4   1.0   2.7  -0.9  -0.3   1.4   1.8  -2.4  -1.1
- 1876   2.3   2.1  -0.3   1.1   0.9   2.0  -0.9   1.8   1.8  -1.6  -0.7  -0.8
- 1877  -1.9  -3.2  -1.9  -4.1  -2.0  -4.6  -1.6  -1.5  -3.0  -2.9  -2.2  -2.8
- 1878  -2.1  -4.8  -3.3  -1.1   0.2  -0.6   2.4   1.9   2.9   1.6   2.1   3.3
- 1879   2.6   2.9   2.3   1.6   0.2   1.9   3.4   3.4   3.2   2.4   1.2  -1.5
- 1880   2.1   1.5   2.5   0.7   1.6   1.0   0.2   2.1   1.4   0.7   1.0  -0.6
- 1881  -1.8  -1.5   0.2   0.2  -0.6  -0.8  -0.9  -2.0  -2.4  -4.2   0.8   1.2
- 1882  -1.7  -0.5   0.6   0.1   0.9  -1.9  -3.5  -4.6  -2.7   0.0   0.2   1.7
- 1883   1.4  -2.1  -5.2   1.9   1.8   0.3  -1.9   0.0  -1.6   0.5   0.3  -3.6
- 1884  -2.8  -1.6   1.5  -1.7   0.2   1.1  -0.6  -1.2  -1.1   0.4  -0.4  -2.9
- 1885  -3.6   0.1   0.9  -0.0  -0.3  -1.9  -0.7  -1.8  -0.6  -3.3  -2.6   0.9
- 1886  -0.3  -0.1   0.5   0.3   1.0   0.3   1.1   2.0   2.3   2.2   1.4   2.5
- 1887   2.6   2.0   1.7   1.0  -0.6   0.5   0.6   0.4   0.9   0.9  -1.0   1.0
- 1888  -1.0  -0.5  -2.3  -2.9  -1.3  -2.2  -2.6  -1.6  -1.8  -2.5  -2.3  -0.7
- 1889  -5.7  -0.4  -5.6  -0.0  -0.2   2.7   0.2   0.0   1.7   0.4   3.1   4.1
- 1890   4.2   2.3   2.5   1.0   0.5   0.7  -0.6  -0.8   1.4   0.5   0.1  -0.2
- 1891   3.4  -1.1  -2.1   0.7   0.0  -0.2  -1.0  -1.4  -1.6   0.0  -0.9  -1.2
- 1892   0.4  -2.5   2.0   0.9   1.5   2.2   1.3   0.7  -0.1   1.4  -1.2   0.4
- 1893   1.9   1.5   0.7   1.5   2.1   2.2   2.9   1.3   2.1   1.0   1.4  -1.0
- 1894   4.1   2.1   1.4   1.2  -1.1   0.2   0.7  -2.3  -0.2   0.4  -1.3   0.2
- 1895   0.9   1.3  -0.3   1.3   0.5  -1.2  -1.4  -1.8  -0.9  -1.3  -1.0  -1.8
- 1896   1.1   1.8  -0.4  -0.2  -4.2  -3.2  -2.4  -2.6  -2.4  -2.3  -1.0  -2.1
- 1897  -2.7  -1.8  -3.4  -2.2  -2.4  -0.3  -0.2   0.1   0.1   0.2  -1.5   1.8
- 1898   1.4   0.9   3.2   1.3  -0.2  -0.4   1.0   1.1   1.6   0.6   0.1   0.5
- 1899   2.6   1.6   2.2   0.3  -0.9  -1.3  -1.0  -1.8  -0.3   1.0   2.4  -0.8
- 1900  -1.6  -1.6  -5.2  -2.3  -1.0   3.1   1.6   0.9  -3.0  -3.3  -1.2  -1.2
- 1901  -0.3   0.4   1.7   0.6  -0.0   2.4   2.3   1.5  -2.7  -4.1  -1.7  -0.6
- 1902   3.6  -0.7   2.1   0.9   1.2   0.3   0.1  -1.6  -3.0  -1.4  -0.8  -0.7
- 1903  -2.1  -2.6   3.0   2.3   1.2  -0.2   0.7  -0.1   1.4   0.7   0.0   2.9
- 1904   2.9   3.2   1.6   3.8   1.2  -1.2  -1.6  -0.1   0.2  -0.2  -2.9   0.2
- 1905  -2.0  -4.1  -5.9  -5.3  -5.0  -4.1  -3.3  -1.5  -1.2  -1.3  -3.0  -3.0
- 1906  -1.0  -2.0  -1.0  -1.1  -1.1  -0.6   0.8   2.3   3.1   1.3   3.0   0.5
- 1907   1.1  -0.6  -0.4  -0.9  -0.7   0.4  -0.1  -1.6  -0.0  -0.8  -0.8   0.9
- 1908  -1.8   1.6  -1.0   1.2   0.2  -0.7   2.1   0.4   3.3   1.1   0.2  -1.2
- 1909  -0.6  -0.7  -0.5  -1.8   0.2   2.6   1.7   1.3   0.0   0.3   1.0   0.8
- 1910   0.9   3.2   2.2   0.5   0.2   2.7   3.3   1.4   2.4   1.5   2.8   3.1
- 1911   0.4   0.2   0.4   0.1  -1.0  -1.8  -2.2  -2.1  -1.5  -2.3  -1.5  -0.6
- 1912  -2.3  -3.9  -2.0  -2.8  -1.6  -0.9  -0.4  -1.6  -0.8  -1.4   0.1  -2.0
- 1913  -0.9  -1.3  -0.2  -0.9  -0.9  -0.8  -0.3  -1.6  -1.7  -1.7  -2.0  -1.7
- 1914  -1.2   0.3   1.6  -2.3  -1.3  -2.7  -1.9  -2.4  -2.5  -1.4  -0.9   0.3
- 1915  -5.7  -1.2  -4.3  -1.9   1.4   3.0   3.8   2.0   2.3   1.4  -2.7   1.7
- 1916   0.9  -0.9  -1.6  -0.1   0.7   0.9   4.0   2.3   0.6   0.8   1.3   2.6
- 1917   1.0   2.3   3.2   2.7   2.9   2.6   4.2   5.3   5.2   2.5   3.1   4.3
- 1918   3.0   3.4  -0.7   2.2   1.4  -0.7  -2.4  -0.9  -1.3  -1.0  -0.1  -1.8
- 1919  -3.5  -2.6  -2.7  -0.3  -1.1  -1.5  -1.5  -1.5  -0.9  -2.0  -2.0  -2.1
- 1920   0.1  -0.8  -1.1  -0.1  -0.4   0.5   1.3   0.5   1.0  -1.0  -0.2   1.6
- 1921   2.4   1.1   2.0  -1.2   0.4   4.2   0.4  -1.3   0.7   1.6   1.0   1.3
- 1922   1.5   1.7   0.8  -0.6  -0.8   0.4   0.1  -0.4   0.8   0.7   1.2   2.0
- 1923   1.0   0.6   1.4   1.0   0.2  -0.2  -1.9  -3.2  -2.6  -1.1  -2.3   0.3
- 1924  -1.2  -0.0   0.4  -1.9   1.5   0.8   1.1   1.6   1.3   1.1   1.7   0.7
- 1925   1.0   2.9   2.4   1.6  -0.2  -0.7  -2.2  -1.9  -1.0  -2.5  -1.8  -1.9
- 1926  -1.5  -3.4  -2.7  -0.9  -0.3  -1.0  -0.3  -1.5   0.3   0.5  -0.0   0.9
- 1927   0.9  -0.1   3.2   1.0   0.9   1.0   0.2  -1.3   0.0  -0.9  -1.5   1.3
- 1928  -2.1   2.0   2.3   1.6  -0.3  -1.1   0.0   1.4   1.6   1.5   0.1   2.3
- 1929   3.1   3.8   0.8   0.6  -1.6   0.1   0.4  -0.2  -0.1   1.2   1.6   1.0
- 1930   2.5   1.3   0.0  -0.3   0.2  -0.9  -0.8  -0.6  -1.2   0.7   0.2  -0.6
- 1931   1.5  -3.3   0.8   1.2   1.9   2.1   1.4  -0.9   0.6  -1.6  -0.7   1.4
- 1932   0.4  -0.7  -1.4  -2.9   0.3  -0.3  -2.6  -1.3  -1.9  -1.0  -0.9   0.3
- 1933  -2.6   0.6  -0.6   0.4   0.8  -0.7   0.4  -0.4   0.5   0.4   0.8   1.4
- 1934   1.2   0.0  -0.2   0.7  -0.9   1.4   0.3  -4.0  -1.2   0.4   1.7  -0.7
- 1935   1.2  -1.1   2.1   0.4  -0.6  -0.4   0.0   0.2   1.0   1.1   0.3  -1.0
- 1936  -0.5  -0.2  -0.0   0.7   0.6  -0.5   0.5  -1.7   0.3  -0.1  -2.4  -0.2
- 1937   1.8  -1.3   0.9   0.1  -0.1   0.2  -0.9   0.2   0.1  -0.7  -0.9   1.0
- 1938   1.3   0.6  -0.8   0.5   1.7   2.2   2.9   1.6   1.4   2.1  -0.0   2.6
- 1939   3.4   1.3   1.8   1.2  -0.2  -0.3   1.3  -0.5  -1.7  -2.8  -1.6  -2.0
- 1940  -0.1  -1.3  -2.2  -1.1  -1.9  -2.7  -2.6  -3.1  -3.3  -3.1  -1.4  -4.2
- 1941  -2.2  -3.5  -2.3  -1.4  -0.9  -2.0  -3.3  -3.3  -1.5  -3.7  -1.7  -1.9
- 1942  -2.9  -1.1  -1.3  -0.7   0.6   0.8  -0.3   0.4   1.4   1.2  -1.0   2.6
- 1943   1.9   2.0   0.5   1.7   0.4  -1.2   0.3   1.0   0.9   1.3   0.3  -2.0
- 1944  -1.9   0.6   0.8  -0.7  -0.1  -0.7  -1.5   0.4   0.4  -1.7  -1.3   0.5
- 1945   1.0   1.1   2.2  -0.9  -0.0   0.8   0.5   1.7   1.5   0.2  -0.8   1.1
- 1946  -0.7   0.6  -0.6  -1.2  -1.5  -1.4  -1.7  -0.9  -2.9  -2.3  -0.5  -1.4
- 1947  -1.2  -1.2   2.0  -0.6  -1.8   0.1   1.4   0.9   2.0  -0.5   1.2   0.8
- 1948  -0.8  -0.9  -1.1   0.3   0.5  -0.8  -0.0  -1.0  -1.4   0.8   0.4  -1.4
- 1949  -1.7   0.1   0.7   0.2  -0.8  -1.7  -0.4  -0.9   0.3   0.7  -1.2   1.2
- 1950   0.9   3.4   3.1   1.9   0.9   3.2   3.3   1.8   1.1   2.7   1.6   4.4
- 1951   2.7   1.0  -1.3  -1.1  -1.7  -0.5  -2.3  -1.2  -2.1  -2.3  -1.6  -1.6
- 1952  -2.0  -1.8   0.0  -0.9   1.0   0.8   0.7  -0.7  -0.4   0.3  -0.3  -2.6
- 1953   0.4  -1.6  -1.4  -0.1  -3.6  -0.5  -0.2  -3.1  -2.4  -0.3  -0.7  -1.1
- 1954   1.0  -1.2  -0.5   0.6   0.4  -0.5   0.4   1.3   0.3   0.1   0.2   2.4
- 1955  -1.1   2.9   0.1  -0.8   1.4   1.7   2.7   2.0   2.5   2.5   2.2   1.7
- 1956   2.3   2.4   1.5   1.2   2.2   1.3   1.7   1.5   0.0   3.0   0.1   1.7
- 1957   1.0  -0.8  -0.6   0.0  -1.7  -0.4   0.1  -1.7  -1.8  -0.3  -2.0  -0.9
- 1958  -3.8  -1.6  -0.5   0.2  -1.5  -0.2   0.4   1.0  -0.7  -0.4  -1.0  -1.4
- 1959  -2.0  -3.2   1.4   0.3   0.4  -0.9  -0.8  -0.9  -0.0   0.5   1.6   1.4
- 1960   0.0  -0.4   0.9   1.0   0.5  -0.5   0.6   0.8   1.1  -0.2   0.9   1.2
- 1961  -0.7   1.1  -4.5   1.1   0.2  -0.5   0.2  -0.4   0.1  -1.1   0.9   2.6
- 1962   3.6  -1.1  -0.7  -0.1   1.6   0.6  -0.2   0.6   0.8   1.4   0.4   0.1
- 1963   1.8   0.6   1.1   1.0   0.2  -1.6  -0.5  -0.8  -1.1  -2.7  -1.7  -2.6
- 1964  -0.9  -0.5   1.1   1.7  -0.1   0.7   0.7   2.2   2.3   2.0   0.1  -0.9
- 1965  -1.0   0.1   0.4  -1.3  -0.2  -1.7  -3.6  -2.0  -2.5  -2.0  -2.9   0.0
- 1966  -2.8  -1.1  -2.8  -0.8  -1.1  -0.0  -0.2   0.5  -0.4  -0.6  -0.2  -1.0
- 1967   3.0   2.6   1.3  -0.4  -0.5   0.6   0.0   0.7   1.0  -0.3  -1.0  -1.4
- 1968   0.6   1.8  -0.8  -0.4   1.9   1.4   1.0  -0.2  -0.5  -0.5  -0.7   0.1
- 1969  -3.2  -1.8  -0.2  -1.1  -0.9  -0.3  -1.2  -0.9  -2.0  -2.2  -0.3   0.5
- 1970  -2.3  -2.7   0.1  -0.6   0.2   1.2  -1.0   0.4   2.1   1.5   2.8   3.3
- 1971   0.4   3.1   3.4   2.8   1.2   0.2   0.1   2.2   2.7   2.8   0.9   0.1
- 1972   0.6   1.4   0.1  -0.6  -3.4  -1.8  -3.1  -1.6  -2.6  -2.0  -0.7  -2.6
- 1973  -0.8  -3.2   0.3  -0.3   0.4   1.3   0.9   1.7   2.3   1.0   4.7   3.2
- 1974   4.3   3.2   3.6   1.4   1.4   0.1   1.9   0.8   2.0   1.3  -0.5  -0.0
- 1975  -1.3   1.0   1.9   1.7   0.8   1.8   3.4   3.1   3.9   2.7   2.1   3.7
- 1976   2.4   2.6   2.2   0.2   0.3  -0.2  -1.9  -2.2  -2.2   0.4   1.1  -1.0
- 1977  -1.1   1.7  -2.1  -1.3  -1.4  -2.5  -2.5  -2.2  -1.6  -2.3  -2.5  -2.3
- 1978  -0.7  -5.7  -1.3  -1.0   2.1   0.5   0.7   0.0   0.1  -1.2  -0.2  -0.4
- 1979  -1.1   1.3  -0.8  -0.7   0.5   0.6   2.1  -1.0   0.2  -0.6  -1.0  -1.6
- 1980   0.5  -0.0  -2.0  -1.7  -0.5  -0.7  -0.4   0.0  -0.9  -0.4  -0.8  -0.5
- 1981   0.4  -1.0  -3.4  -0.7   1.1   1.7   1.2   0.6   0.6  -1.2   0.1   0.7
- 1982   2.2  -0.1   0.1  -0.3  -1.1  -2.6  -3.2  -4.0  -3.3  -3.6  -5.1  -4.6
- 1983  -6.9  -7.6  -5.6  -2.2   0.7  -0.5  -1.3  -0.3   1.7   0.4  -0.3  -0.2
- 1984   0.2   0.9  -1.5   0.3  -0.1  -1.3   0.1   0.1   0.2  -1.0   0.4  -0.7
- 1985  -0.7   1.7   0.3   1.7   0.3  -1.5  -0.4   1.1  -0.1  -1.2  -0.5   0.2
- 1986   1.5  -2.7  -0.1   0.1  -0.9   1.1   0.2  -1.6  -1.0   0.9  -2.5  -2.9
- 1987  -1.5  -3.1  -3.3  -3.0  -2.8  -2.8  -2.8  -2.5  -1.9  -1.1  -0.2  -1.2
- 1988  -0.3  -1.4   0.1  -0.1   1.3  -0.4   1.7   2.2   3.4   2.2   3.0   2.1
- 1989   2.7   1.8   1.0   2.6   1.9   0.8   1.4  -1.3   0.9   1.0  -0.6  -1.2
- 1990  -0.4  -3.9  -1.9  -0.1   1.8  -0.1   0.8  -1.0  -1.3   0.1  -1.1  -0.7
- 1991   1.0  -0.1  -2.2  -1.7  -2.4  -0.9  -0.2  -1.4  -2.9  -2.4  -1.4  -3.7
- 1992  -5.6  -2.3  -4.8  -2.3   0.1  -1.9  -1.3  -0.0   0.0  -3.2  -1.4  -1.4
- 1993  -2.0  -2.1  -1.8  -2.6  -1.0  -2.2  -1.8  -2.4  -1.3  -2.5  -0.3   0.1
- 1994  -0.5  -0.1  -2.2  -2.9  -1.7  -1.5  -2.9  -2.9  -3.0  -2.6  -1.2  -2.5
- 1995  -1.0  -0.8   0.4  -1.8  -1.2  -0.4   0.6  -0.1   0.5  -0.5  -0.1  -1.3
- 1996   1.7  -0.2   1.1   1.1   0.2   1.6   1.0   0.7   1.0   0.7  -0.3   1.3
- 1997   0.8   2.6  -1.9  -1.4  -3.0  -3.2  -1.7  -3.4  -2.6  -3.1  -2.3  -2.1
- 1998  -5.4  -4.4  -5.7  -3.2   0.1   1.2   2.0   1.6   2.0   1.6   1.7   2.3
- 1999   3.2   1.2   1.4   2.2   0.1  -0.1   0.8   0.1  -0.1   1.5   1.8   2.5
- 2000   1.1   2.6   1.6   1.9   0.3  -1.0  -0.7   0.6   1.7   1.6   3.3   1.1
- 2001   1.8   2.4   0.8  -0.1  -1.4  -0.1  -0.7  -1.6   0.3  -0.6   1.2  -1.9
- 2002   0.7   1.5  -1.4  -0.6  -2.0  -1.1  -1.1  -2.6  -1.1  -1.2  -1.0  -2.3
- 2003  -0.6  -2.0  -1.5  -0.7  -1.0  -1.9   0.4  -0.5  -0.2  -0.5  -0.7   1.8
- 2004  -2.8   1.8  -0.3  -2.1   1.5  -2.2  -1.2  -1.2  -0.6  -0.5  -1.4  -1.8
- 2005   0.4  -6.7  -0.4  -1.6  -1.9   0.1   0.1  -1.3   0.7   1.9  -0.5  -0.3
- 2006   2.9  -0.3   2.3   1.5  -1.4  -1.1  -1.3  -2.6  -1.1  -2.7   0.1  -0.8
- 2007  -1.8  -0.7  -0.6  -0.6  -0.6   0.3  -0.8   0.1   0.3   0.9   1.4   2.9
- 2008   3.1   4.4   1.9   0.9  -0.5   0.5   0.3   1.3   2.4   2.2   2.4   2.5
- 2009   1.9   3.0  -0.2   1.1  -0.7  -0.5   0.2  -1.1   0.6  -2.7  -1.3  -1.7
- 2010  -2.5  -3.5  -2.3   2.0   1.3   0.1   3.2   2.8   4.3   2.9   2.4   5.2
- 2011   4.2   4.7   3.8   3.2   0.3  -0.1   1.7   0.2   2.1   1.0   1.9   4.4
- 2012   1.9   0.3   0.2 -99.9 -99.9 -99.9 -99.9 -99.9 -99.9 -99.9 -99.9 -99.9
