@@ -1,12 +1,12 @@
-\name{magic}
+\name{oceMagic}
 
-\alias{magic}
+\alias{oceMagic}
 
 \title{Find the type of an oceanographic data file}
 
 \description{Find the type of an oceanographic data file.}
 
-\usage{magic(file, debug=getOption("oceDebug"))}
+\usage{oceMagic(file, debug=getOption("oceDebug"))}
 
 \arguments{
   \item{file}{a connection or a character string giving the name of the
